--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
   <div id="empty-zone">
-    <div id="creation-zone" draggable="true"></div>
+    <div id="creation-zone"></div>
     <div id="left-and-right-zones">
       <div id="left-zone"></div>
       <div id="right-zone"></div>
     </div>
-</div>
+  </div>
 
 
 
